--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ iframe {
 }
 .header .profile-content .social a:hover {
   background: #778492;
+  text-align: center;
 }
 .header .profile-content .social a .fa {
   font-size: 20px;
