--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ iframe {
   padding: 30px 0;
   background: #f5f5f5;
   border-top: 10px solid #778492;
+  text-align: center;
 }
 .header .btn {
   margin-top: 60px;
