--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ iframe {
   font-size: 38px;
   margin-bottom: 5px;
   margin-top: 30px;
+  text-align: center;
 }
 .header .profile-content .desc {
   color: #778492;
@@ -141,6 +142,7 @@ iframe {
   font-size: 24px;
   margin-top: 0;
   margin-bottom: 15px;
+  text-align: center;
 }
 .header .profile-content .social a {
   background: #b0b7bf;
