--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ iframe {
   padding-bottom: 60px;
 }
 .section {
+  justify-content: center;
   margin-bottom: 30px;
 }
 .section .section-inner {
@@ -550,7 +551,6 @@ margin: 0 auto;
 @media (min-width: 1400px) {
   .container {
     justify-content: center;
-    /*width: 1360px;*/
-    width: 1000px;
+    width: 1360px;
   }
 }
