--- a/styles.css
+++ b/styles.css
@@ -111,11 +111,6 @@ a.dotted-link:hover {
   justify-content: center;
 }
 
-.header .btn {
-  margin-top: 60px;
-  font-weight: bold;
-}
-
 .header .profile-content .name {
   color: #49515a;
   font-size: 38px;
@@ -133,5 +128,72 @@ a.dotted-link:hover {
   margin-bottom: 15px;
   text-align: center;
   justify-content: center;
+}
+
+/* ======== Boxes ========= */
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  min-height: 90vh;
+}
+
+.box {
+  padding: 60px;
+  box-shadow: 0px 0px 30px -10px black;
+  background-color: white;
+  max-width: 65%;
+  margin-top: 5%;
+}
+
+#content > .box:last-child {
+  margin-bottom: 5%;
+}
+
+#content > .box:only-child {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon-link {
+  text-decoration: none;
+    
+  vertical-align: -0.5em;
+}
+
+.icon-link > img {
+  max-height: 2em;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+h3 > .icon-link > img {
+  max-height: 2em;
+  padding-left: 0;
+  padding-right: 0.25em;
+}
+
+img.scrot {
+  max-width: 75%;
+  display: block;
+  margin: auto;
+}
+
+.space {
+  padding-top: 10px;
+}
+
+.space2 {
+  padding-top: 20px;
 }
 
